Niels revision: conclusion

--- a/problems/problems.tex
+++ b/problems/problems.tex
@@ -2,7 +2,10 @@
 \label{problems}
 There are several known security vulnerabilities with the current design.
 As said in section \ref{pb-aim}, an incremental approach was taken.
-As such, the design is part of a bigger system that as a whole is to be deployed in the real world.
+As such, the design is part of a bigger system that as a whole is to be developed,
+before it can be deployed in the real world.
+The current implementation is not yet ready to fully replace BarterCast as a reputation system.
+It is too vulnerable for malicious nodes to attack the system.
 In this section we will describe the known vulnerabilities
 and explain the future work that is needed to limit these vulnerabilities.
 
