--- a/conclusion/conclusion.tex
+++ b/conclusion/conclusion.tex
@@ -1,10 +1,10 @@
 \chapter{Conclusion}
 A reputation system is a necessity in a collaborative network like peer-to-peer filesharing.
-But the creation of a tamper-proof interaction history is a difficult undertaking.
-As seen as by several attempts in related work with varying success.
+But the creation of a tamper-proof interaction history is a difficult undertaking,
+as seen as by several attempts in related work with varying success.
 This first step, in an incremental approach to creating a new data structure
 that can be used as a tamper-proof interaction history, is further testimony to that statement.
-But MultiChain is a proof-of-concept that an different approach with multiple chains
+But MultiChain is a proof-of-concept that takes a different approach with multiple chains
 instead of a single chain can be succesful in creating a reputation system
 
 A scalable system has been introduced that can track interactions.
