Niels revisions: bib

--- a/bib/bibliography.bib
+++ b/bib/bibliography.bib
@@ -61,28 +61,28 @@
 
 @book{Plak-anonymous,
   title={Anonymous Internet: Anonymizing peer-to-peer traffic using applied cryptography},
-  author={Plak, RS},
+  author={Plak, Rutger S},
   year={2014},
   publisher={TU Delft, Delft University of Technology}
 }
 
 @book{logiotatidis-splash,
   title={Splash: data synchronization in unmanaged, untrusted peer-to-peer networks},
-  author={Logiotatidis, G},
+  author={Logiotatidis, Giorgos},
   year={2010},
   publisher={TU Delft, Delft University of Technology}
 }
 
 @book{dumitrescu-tribler,
   title={Rewarding Good Behavior in Peer-to-Peer Networks},
-  author={Dumitrescu, V},
+  author={Dumitrescu, Vlad},
   year={2013},
   publisher={TU Delft, Delft University of Technology}
 }
 
 @book{ruigrok-anonymous,
   title={BitTorrent file sharing using Tor-like hidden services},
-  author={Ruigrok, RJ},
+  author={Ruigrok, Rob J},
   year={2015},
   publisher={TU Delft, Delft University of Technology}
 }
@@ -229,7 +229,7 @@
 }
 
 @inproceedings{pouwelse-buddycast,
-	author          = {J.A. Pouwelse and J. Yang and M. Meulpolder and D.H.J. Epema and H.J. Sips},
+	author          = {Pouwelse, Johan A  and Yang, Jie and Meulpolder, Michel and Epema, Dick HJ  and Sips, Henk J },
 	title           = {Buddycast: an Operational Peer-to-Peer Epidemic Protocol Stack},
 	booktitle       = {Proc. of the 14th Annual Conf. of the Advanced School for Computing and Imaging},
 	publisher       = {ASCI},
@@ -289,7 +289,7 @@
 
 @article{Bakker-tribler,
 	title={Tribler protocol specification},
-	author={Bakker, A and Mol, JJD and Yang, J and d’Acunto, L and Pouwelse, JA and Wang, J and Garbacki, P and Iosup, A and Doumen, J and Roozenburg, J and others},
+	author={Bakker, Arnoud and Mol, Jan-David and Yang, Jie and d’Acunto, Lucia and Pouwelse, Johan A and Wang, Jun and Garbacki, Pawel and Iosup, Alexandru and others},
 	journal={URL: http://svn. tribler. org/bt2-design/protospec-unified},
 	year={2009}
 }
