--- a/design/exchanging_blocks.tex
+++ b/design/exchanging_blocks.tex
@@ -19,7 +19,7 @@ A sequence diagram can be seen in Figure \ref{fig:exchange-new-sequence}.
 \label{fig:packet-creation}
 }
 \caption{Exchanging data for block creation.}
-\label{fig:synthetic-anonymous-amounts}
+\label{fig:block-creation-new}
 \end{figure}
 
 The seeder, A, will create a packet that will be sent to the downloader, B.
@@ -58,7 +58,7 @@ At this point a new block is created.
     \label{fig:payload-signature-old}
 }
 \caption{Exchanging data for block creation using existing functionality.}
-\label{fig:synthetic-anonymous-amounts}
+\label{fig:block-creation-old}
 \end{figure}
 Within Dispersy functionality was already build to create a message, sign the message
 and request multiple nodes to also provide their signature on this message.
