--- a/thesis.tex
+++ b/thesis.tex
@@ -22,6 +22,8 @@
 \usepackage{fancyvrb}
 % Side by side packages
 \usepackage{subfigure}
+% bib in order of appearance
+\bibliographystyle{ieeetr}
 
 \newsavebox{\FVerbBox}
 \newenvironment{FVerbatim}
@@ -104,7 +106,7 @@
 \include{conclusion/conclusion}
 
 % BIBLIOGRAPHY
-\bibliographystyle{bib/latex8}
+%\bibliographystyle{bib/latex8}
 \bibliography{bib/bibliography}
 
 %\appendix
