--- a/experimentation/unittests.tex
+++ b/experimentation/unittests.tex
@@ -37,7 +37,7 @@ Total      & 672 &              & 47           &
 
 \subsection{Gumby}
 
-Next to that, Tribler uses a homemade test runner Gumby.
+Next to that, Tribler uses a homemade testing environment Gumby.
 Gumby can start multiple instances of Tribler and follow test scenarios.
 Gumby can be used to perform system tests and experiments.
 These system tests have to be manually validated.
