--- a/experimentation/experimentation.tex
+++ b/experimentation/experimentation.tex
@@ -11,8 +11,21 @@ therefore they do not have two inbound arrows.
 Red nodes are half-signed blocks,
 and therefore only have one inbound and one outbound arrow.
 
+Some experiments were also run multiple times because Dispersy does not always connect to every peer.
+At the start of the experiment the peers are forced to be introduced,
+but this does not always succeed.
+This is a problem in discoverability and has been experienced by previous work aswell\cite{ruigrok-anonymous}.
+This also happens when downloading a torrent in the real world.
+The final version is chosen when Dispersy did connect all the peers.
+
+
+
 \input{experimentation/unittests.tex}
+
+\section{Tracking download and upload amounts}
 \input{experimentation/singlerequest/singlerequest.tex}
-\input{experimentation/synthetic/synthetic.tex}
+\input{experimentation/speeds/speeds-experiment.tex}
+\input{experimentation/anonymous/anonymous-experiment.tex}
+
 \input{experimentation/deadlock/deadlock.tex}
 
