Added simple chain experiment

--- a/experimentation/anonymous/anonymous-experiment.tex
+++ b/experimentation/anonymous/anonymous-experiment.tex
@@ -3,13 +3,13 @@ In an anonymous download scenario the data is downloaded through multiple hops.
 A seeder uploads data to the first hop.
 This hop passes the data to the second hop.
 The second hop sends the data to its destination at the leecher.
-This can be seen as sequence of peers.
+This can be seen as sequence of peers and is illustrated in Figure \ref{fig:seeder-hops-leecher}.
 More hops can be added to better safegaurd the anonymity of the download.
 
 \begin{figure}
 	\centerline{\includegraphics[scale=0.3]{experimentation/anonymous/seeder-hops-leecher.eps}}
 	\caption{Block creation in an anonymous download.}
-	\label{fig:seeder-leecher}
+	\label{fig:seeder-hops-leecher}
 \end{figure}
 
 The total download and upload amount is plotted, in the same way as the previous experiment,
