--- a/experimentation/experimentation.tex
+++ b/experimentation/experimentation.tex
@@ -18,12 +18,11 @@ This is a problem in discoverability and has been experienced by previous work a
 This also happens when downloading a torrent in the real world.
 The final version is chosen when Dispersy did connect all the peers.
 
-
-
 \input{experimentation/unittests.tex}
 
 \section{Tracking download and upload amounts}
 \input{experimentation/singlerequest/singlerequest.tex}
+\input{experimentation/chain/chain-experiment.tex}
 \input{experimentation/speeds/speeds-experiment.tex}
 \input{experimentation/anonymous/anonymous-experiment.tex}
 
