Experimentation: added introduction

--- a/experimentation/experimentation.tex
+++ b/experimentation/experimentation.tex
@@ -28,6 +28,13 @@ The final version is chosen when Dispersy did connect all the peers.
 \input{experimentation/unittests.tex}
 
 \section{Tracking download and upload amounts}
+In this section we will experiment with MultiChain creating blocks and tracking download and upload amounts of peers.
+We will first start with creating a simple block in an experiment.
+The next experiment is to try to create a chain of blocks with mimicking a download of 10MB.
+Downloads are done at different download speeds and an experiment was done to test MultiChain in this environment.
+MultiChain has to be able to track anonymous downloads aswell
+and we conducted an experiment with anonymousily downloading.
+
 \input{experimentation/singlerequest/singlerequest.tex}
 \input{experimentation/chain/chain-experiment.tex}
 \input{experimentation/speeds/speeds-experiment.tex}
