--- a/experimentation/singlerequest/singlerequest.tex
+++ b/experimentation/singlerequest/singlerequest.tex
@@ -1,4 +1,4 @@
-\section{Single block creation}
+\subsection{Single block creation}
 In this experiment we try to create a block between two nodes.
 This experiment validates the MultiChain to be able to correctly create a block between nodes in normal circumstances.
 The experiment is run using gumby with all nodes running on a single computer.
