--- a/design/integration.tex
+++ b/design/integration.tex
@@ -9,7 +9,7 @@ The scheduler currently only tracks traffic of anonymous downloads.
 Bartercast is not yet removed and
 currently MultiChain runs together with Bartercast untill MultiChain fully replaces Bartercast.
 
-The scheduler should be expanded in the future to schedule blocks in a more sophisticated way.
+We recommend that the scheduler should be expanded to schedule blocks in a more sophisticated way.
 The functionality of the scheduler is very limited and is missing basic functionality.
 The most important improvement that should be introduced is the punishment of not signing blocks.
 Currently, nodes can deny to have their behaviour tracked.
