--- a/experimentation/deadlock/deadlock.tex
+++ b/experimentation/deadlock/deadlock.tex
@@ -72,7 +72,7 @@ This is validated by a block created between node 3 and node 1.
 
 \subsection{Naturally occuring deadlock}
 In the experiment a 100 megabyte file was downloaded anonymously with 2 hops.
-Anonymously downloading is decribed more in the thesis report of R. Ruigrok\cite{ruigrok-anonymous}.
+Anonymously downloading is described more in the thesis report of R. Ruigrok\cite{ruigrok-anonymous}.
 There are 2 Triblers instances with exit functionality and 18 instances without exit functionality.
 All instances are run locally on one machine.
 The instances are run in parallel,
