--- a/experimentation/experimentation.tex
+++ b/experimentation/experimentation.tex
@@ -22,8 +22,10 @@ Some experiments were also run multiple times because Dispersy does not always c
 At the start of the experiment the peers are forced to be introduced,
 but this does not always succeed.
 This is a problem in discoverability and has been experienced by previous work aswell\cite{ruigrok-anonymous}.
-This also happens when downloading a torrent in the real world.
 The final version is chosen when Dispersy did connect all the peers.
+We recommend that Dispersy is changed to allow a modified behaviour when experimenting
+where the pool of candidates is not refreshed,
+as explained in section \ref{sect:bartercast}
 
 \input{experimentation/unittests.tex}
 
