--- a/experimentation/speeds/speeds-experiment.tex
+++ b/experimentation/speeds/speeds-experiment.tex
@@ -42,7 +42,7 @@ This leaves the graph disconnected.
 
 \begin{figure}
 	\centerline{\includegraphics[scale=0.06]{experimentation/speeds/synthetic.png}}
-	\caption{Disconnected chain graph of tracking downloads at different speeds.}
+	\caption{Disconnected chain graph of 6 individual downloads at different speeds.}
 	\label{fig:synthetic-simple-graph}
 \end{figure}
 
