--- a/relatedWork/bartercast.tex
+++ b/relatedWork/bartercast.tex
@@ -1,4 +1,5 @@
 \section{BarterCast}
+\label{sect:bartercast}
 BarterCast is the system used by Tribler to incentivise good behaviour by keeping track of reputations
 \cite{pouwelse-buddycast}\cite{meulpolder-bartercast}\cite{meulpolder-bartercast-paper}\cite{dumitrescu-tribler}.
 It is fully decentralized, in contrast to previous reputation systems in a peer-to-peer network.
