--- a/experimentation/anonymous/anonymous-experiment.tex
+++ b/experimentation/anonymous/anonymous-experiment.tex
@@ -54,16 +54,6 @@ In section \ref{sect:deadlock-exp} we further experiment with the timeouts in th
 \label{fig:synthetic-anonymous-amounts}
 \end{figure}
 
-The graph in Figure \ref{fig:synthetic-anonymous-graph} shows the graph of the blocks created by the experiment.
-In contrast to the previous experiment, this graph is connected.
-Because every peer interacts indirectly with every other peer.
-
-\begin{figure}
-	\centerline{\includegraphics[scale=0.1]{experimentation/anonymous/anonymous.png}}
-	\caption{MultiChain chain graph of a single download through 2 hops.}
-	\label{fig:synthetic-anonymous-graph}
-\end{figure}
-
 The seeder and leecher both only interact with one hop.
 These hops furthermore only interact with each other.
 This can be clearly seen a part of the graph magnified in Figure \ref{fig:synthetic-anonymous-graph-magnified}.
@@ -73,17 +63,30 @@ The blocks are created alternating resulting in the graph pictured.
 
 \begin{figure}
 	\centerline{\includegraphics[scale=0.5]{experimentation/anonymous/anonymous-magnified.png}}
-	\caption{Magnification of part of the graph.}
+	\caption{Intertwining of the seeder and hop 1 on the left, hop1 and hop 2 in the middle, and hop 2 and the leecher on the right.}
 	\label{fig:synthetic-anonymous-graph-magnified}
 \end{figure}
 
-In the graph the timeout period can be seen clearly in Figure \ref{fig:synthetic-anonymous-graph}.
+In the graph the timeout period can be seen clearly in Figure \ref{fig:synthetic-anonymous-timeout}.
 The two half-signed block can be seen in red.
 The block with a reference coming from the outer block is the half-signed block belonging to the seeder.
 The strain of blue nodes are the blocks created between the second hop and the leecher.
 The red inner block is referenced by the first block created between the first hop and second hop after the timeout.
 
+\begin{figure}
+	\centerline{\includegraphics[scale=0.1]{experimentation/anonymous/anonymous-timeout.png}}
+	\caption{Timeout of the seeder and hop 1, while hop 2 and the leecher continues.}
+	\label{fig:synthetic-anonymous-timeout}
+\end{figure}
 
+The graph in Figure \ref{fig:synthetic-anonymous-graph} shows the graph of the blocks created by the experiment.
+In contrast to the previous experiment, this graph is connected.
+Because every peer interacts indirectly with every other peer.
 
+\begin{figure}
+	\centerline{\includegraphics[scale=0.1]{experimentation/anonymous/anonymous.png}}
+	\caption{MultiChain chain graph of a single download through 2 hops.}
+	\label{fig:synthetic-anonymous-graph}
+\end{figure}
 
 
