--- a/design/bookkeeping.tex
+++ b/design/bookkeeping.tex
@@ -14,7 +14,7 @@ Every block only contains one transaction.
 
 The contents of a block can be seen in Figure \ref{fig:block}.
 The up and down represents the amount that has been transferred between A and B directly for the current transaction.
-Up means data uploaded by A and down the data downloaded by B.
+Up means data uploaded by A to B and down the data downloaded by A from B.
 Every peer in Dispersy has a public and private key and are unique identifiers.
 A block contains both public keys of the peers,
 so it is possible to verify to which peers the transaction belongs to.
