--- a/design/exchanging_blocks.tex
+++ b/design/exchanging_blocks.tex
@@ -9,7 +9,7 @@ A sequence diagram can be seen in Figure \ref{fig:exchange-new-sequence}.
 
 \begin{figure}[tpb]
 \centering
-\subfigure[Sequence diagram for block creation]{
+\subfigure[Sequence diagram for block creation.]{
 \centerline{\includegraphics[scale=0.3]{design/figs/exchange_new.eps}}
 \label{fig:exchange-new-sequence}
 }
