--- a/experimentation/anonymous/anonymous-experiment.tex
+++ b/experimentation/anonymous/anonymous-experiment.tex
@@ -1,7 +1,7 @@
-\subsection{Anonymous download}
+\subsection{Synthetic anonymous download}
 In an anonymous download scenario the data is downloaded through multiple hops.
 A seeder uploads data to the first hop.
-This hop passes the data to the second hop.
+This hop relays the data to the second hop.
 The second hop sends the data to its destination at the leecher.
 This can be seen as sequence of peers and is illustrated in Figure \ref{fig:seeder-hops-leecher}.
 More hops can be added to better safegaurd the anonymity of the download.
@@ -60,12 +60,10 @@ This can be clearly seen a part of the graph magnified in Figure \ref{fig:synthe
 The middle nodes represent the interaction between the hops.
 The outer nodes are interactions between the seeder and the first hop and between the second hop and leecher.
 The blocks are created alternating resulting in the graph pictured.
-In contrast to the previous experiment, this graph is connected.
-Because every peer interacts indirectly with every other peer.
 
 \begin{figure}
 	\centerline{\includegraphics[scale=0.5]{experimentation/anonymous/anonymous-magnified.png}}
-	\caption{Intertwining of the seeder and hop 1 on the left, hop1 and hop 2 in the middle, and hop 2 and the leecher on the right.}
+	\caption{Zoom of the intertwining of the seeder and hop 1 on the left, hop1 and hop 2 in the middle, and hop 2 and the leecher on the right.}
 	\label{fig:synthetic-anonymous-graph-magnified}
 \end{figure}
 
@@ -77,6 +75,9 @@ The red inner block is referenced by the first block created between the first h
 
 \begin{figure}
 	\centerline{\includegraphics[scale=0.1]{experimentation/anonymous/anonymous-timeout.png}}
-	\caption{Timeout of the seeder and hop 1, while hop 2 and the leecher continues.}
+	\caption{Zoom of the timeout of the seeder and hop 1, while hop 2 and the leecher continues.}
 	\label{fig:synthetic-anonymous-timeout}
 \end{figure}
+
+
+
