Updated title,dates and commission.

--- a/frontcover.tex
+++ b/frontcover.tex
@@ -4,7 +4,7 @@
 
 \begin{center}
 \LARGE{MultiChain:\\
-       		An incremental step in a new distributed data structure}
+       		A cybercurrency for cooperation}
 \end{center}
 
 \vspace{1.5cm}
