--- a/graduationdata.tex
+++ b/graduationdata.tex
@@ -8,13 +8,13 @@ Steffan D. Norberhuis\\
 \end{tabular}\\
 \noindent \textbf{Title}\\
 \begin{tabular}{l}
-MultiChain: an incremental step in a new distributed data structure\\
+MultiChain: a cybercurrency for cooperation\\
 \\
 \end{tabular}\\
 \noindent \textbf{MSc presentation}\\
 \begin{tabular}{l}
 % <MM> DD, YYYY (like \today)
-%TODO: #36 GRADUATION DATE\\
+December 14, 2015
 \\
 \end{tabular}
 
@@ -26,9 +26,10 @@ MultiChain: an incremental step in a new distributed data structure\\
 %examples:
 %prof. dr. ir. H. J. Sips (chair) & Delft University of Technology \\
 %ir. dr. D. H. J. Epema           & Delft University of Technology \\
-Prof. dr. ir. H. J. Sips            & Delft University of Technology \\
-dr. ir. J. A. Pouwelse        & Delft University of Technology \\
-dr. ir. Z. Erkin              & Delft University of Technology \\
+dr. ir. J. A. Pouwelse          & Delft University of Technology \\
+dr. A. Iosup                    & Delft University of Technology \\
+dr. ir. Z. Erkin                & Delft University of Technology \\
+
 \end{tabular}
 
 \input{abstract.tex}
