--- a/titlepage.tex
+++ b/titlepage.tex
@@ -4,7 +4,7 @@
   \null\vfill
     \begin{center}
     \LARGE{MultiChain:\\
-		an incremental step in a new distributed data structure}
+		A cybercurrency for cooperation}
     \end{center}
 
     \vspace{3cm}
