Anonymous integrated experiment added

--- a/experimentation/anonymous/anonymous-experiment.tex
+++ b/experimentation/anonymous/anonymous-experiment.tex
@@ -25,7 +25,7 @@ The seeder only has upload validating blocks and as such has half the amount of 
 The downloader has viceversa only download validating blocks.
 The slope of his figure is much steeper as a result.
 
-In the graph a hitch can be found in the figures of the seeder and the first hop.
+In the plot a hitch can be found in the figures of the seeder and the first hop.
 This is the result of the first hop sending a signature request to the second hop.
 The second hop was not able to process this request,
 because it was already working on creating another block.
