--- a/experimentation/experimentation.tex
+++ b/experimentation/experimentation.tex
@@ -41,6 +41,7 @@ and we conducted an experiment with anonymousily downloading.
 \input{experimentation/chain/chain-experiment.tex}
 \input{experimentation/speeds/speeds-experiment.tex}
 \input{experimentation/anonymous/anonymous-experiment.tex}
+\input{experimentation/anonymous-integrated/anonymous-integrated-experiment.tex}
 
 \input{experimentation/deadlock/deadlock.tex}
 
